找回密码界面

--- a/QiHuangDJ/VIewController/LoginAndRegister/RetrievePasswordViewController.xib
+++ b/QiHuangDJ/VIewController/LoginAndRegister/RetrievePasswordViewController.xib
@@ -7,6 +7,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RetrievePasswordViewController">
             <connections>
+                <outlet property="emailTextField" destination="A45-VZ-JIo" id="Aqs-kk-CYd"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -14,9 +15,142 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VCt-Wl-Ubp" userLabel="Email Holder View">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="45"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ob0-oh-dvh" userLabel="Email Divider View">
+                            <rect key="frame" x="0.0" y="44" width="320" height="1"/>
+                            <color key="backgroundColor" red="0.73725490199999999" green="0.73725490199999999" blue="0.73725490199999999" alpha="1" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="1" id="tg3-S5-jMf"/>
+                            </constraints>
+                        </view>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="注册邮箱：" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hPy-Y3-bI3" userLabel="Email Specific Label">
+                            <rect key="frame" x="8" y="0.0" width="304" height="45"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="458AED20-087B-494D-B89C-4331C8A624BE" translatesAutoresizingMaskIntoConstraints="NO" id="qR2-kh-6i0" userLabel="Email Editable Indicator Image View">
+                            <rect key="frame" x="300" y="0.0" width="20" height="45"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="20" id="S84-RR-nTZ"/>
+                            </constraints>
+                        </imageView>
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="right" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="A45-VZ-JIo" userLabel="Email Text Field">
+                            <rect key="frame" x="140" y="0.0" width="160" height="45"/>
+                            <color key="textColor" red="0.98039215690000003" green="0.37254901959999998" blue="0.1960784314" alpha="1" colorSpace="calibratedRGB"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits" returnKeyType="done"/>
+                        </textField>
+                    </subviews>
+                    <constraints>
+                        <constraint firstItem="hPy-Y3-bI3" firstAttribute="leading" secondItem="VCt-Wl-Ubp" secondAttribute="leading" constant="8" id="4nP-aA-5Ar"/>
+                        <constraint firstAttribute="bottom" secondItem="qR2-kh-6i0" secondAttribute="bottom" id="7CI-z2-AW1"/>
+                        <constraint firstItem="ob0-oh-dvh" firstAttribute="leading" secondItem="VCt-Wl-Ubp" secondAttribute="leading" id="BxJ-7B-y2X"/>
+                        <constraint firstItem="A45-VZ-JIo" firstAttribute="leading" secondItem="VCt-Wl-Ubp" secondAttribute="leading" constant="140" id="T4B-bh-gor"/>
+                        <constraint firstAttribute="bottom" secondItem="ob0-oh-dvh" secondAttribute="bottom" id="Y31-Yw-vy9"/>
+                        <constraint firstAttribute="trailing" secondItem="hPy-Y3-bI3" secondAttribute="trailing" constant="8" id="gkS-pi-kff"/>
+                        <constraint firstAttribute="trailing" secondItem="ob0-oh-dvh" secondAttribute="trailing" id="iEb-CB-Pkf"/>
+                        <constraint firstItem="qR2-kh-6i0" firstAttribute="leading" secondItem="A45-VZ-JIo" secondAttribute="trailing" id="jY8-aO-ZtT"/>
+                        <constraint firstItem="hPy-Y3-bI3" firstAttribute="top" secondItem="VCt-Wl-Ubp" secondAttribute="top" id="m11-ZF-7Ia"/>
+                        <constraint firstAttribute="height" constant="45" id="nqi-Jw-SPC"/>
+                        <constraint firstAttribute="bottom" secondItem="A45-VZ-JIo" secondAttribute="bottom" id="pY7-UE-7w3"/>
+                        <constraint firstItem="qR2-kh-6i0" firstAttribute="top" secondItem="VCt-Wl-Ubp" secondAttribute="top" id="t0V-AQ-2GH"/>
+                        <constraint firstItem="A45-VZ-JIo" firstAttribute="top" secondItem="VCt-Wl-Ubp" secondAttribute="top" id="tqH-68-2My"/>
+                        <constraint firstAttribute="trailing" secondItem="qR2-kh-6i0" secondAttribute="trailing" id="y3n-ZJ-gy7"/>
+                        <constraint firstAttribute="bottom" secondItem="hPy-Y3-bI3" secondAttribute="bottom" id="ztJ-FH-eWY"/>
+                    </constraints>
+                </view>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SjY-r3-F8Z" userLabel="Retrieve Password Button">
+                    <rect key="frame" x="54.5" y="125" width="211" height="40"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="40" id="bu7-1d-dwr"/>
+                    </constraints>
+                    <state key="normal" title="找回密码" backgroundImage="denglu_btn_login.png">
+                        <color key="titleColor" red="0.94387755100000004" green="0.63904685490000002" blue="0.2481521099" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="titleShadowColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </state>
+                    <state key="disabled">
+                        <color key="titleColor" red="0.66326530610000001" green="0.547063882" blue="0.32070185330000001" alpha="1" colorSpace="calibratedRGB"/>
+                    </state>
+                    <state key="selected" backgroundImage="denglu_btn_login_press.png"/>
+                    <state key="highlighted" backgroundImage="denglu_btn_login_press.png"/>
+                    <connections>
+                        <action selector="clickRetrievePasswordButton:" destination="-1" eventType="touchUpInside" id="DHf-PY-yer"/>
+                    </connections>
+                </button>
+            </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="VCt-Wl-Ubp" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="JU0-Yf-Hsm"/>
+                <constraint firstAttribute="trailing" secondItem="VCt-Wl-Ubp" secondAttribute="trailing" id="aau-Hy-2d7"/>
+                <constraint firstItem="SjY-r3-F8Z" firstAttribute="top" secondItem="VCt-Wl-Ubp" secondAttribute="bottom" constant="80" id="cOg-7c-fQl"/>
+                <constraint firstItem="VCt-Wl-Ubp" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="vkk-iW-UGV"/>
+                <constraint firstAttribute="centerX" secondItem="SjY-r3-F8Z" secondAttribute="centerX" id="wuB-Yb-fM7"/>
+            </constraints>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
         </view>
     </objects>
+    <resources>
+        <image name="458AED20-087B-494D-B89C-4331C8A624BE" width="6" height="11">
+            <mutableData key="keyedArchiveRepresentation">
+YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
+GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
+c1dOU0NvbG9ygAKADRIgwAAAgAOAC1d7NiwgMTF90hUKFhhaTlMub2JqZWN0c6EXgASACtIVChodohsc
+gAWABoAJEADSIAohIl8QFE5TVElGRlJlcHJlc2VudGF0aW9ugAeACE8RCXZNTQAqAAABECsrK0JLS0ty
+AAAAAAAAAAAAAAAAAAAAAF9fX5Cpqan8NDQ0TwAAAAAAAAAAAAAAAAMDAwZxcXGppaWl8SMjIzcAAAAA
+AAAAAAAAAAAKCgoPhYWFxpiYmOAVFRUhAAAAAAAAAAAAAAAAFBQUH5OTk9uEhITGEBAQGQAAAAAAAAAA
+AAAAADs7O1q3t7f/ZGRklwAAAAAAAAAAFBQUHpOTk9uEhITGEBAQGQAAAAAKCgoPhoaGxZiYmOAVFRUg
+AAAAAAMDAwZxcXGppKSk8SMjIzcAAAAAAAAAAF9fX5Cpqan8NDQ0TwAAAAAAAAAAAAAAACsrK0JLS0ty
+AAAAAAAAAAAAAAAAAAAAAAAOAQAAAwAAAAEABgAAAQEAAwAAAAEACwAAAQIAAwAAAAQAAAG+AQMAAwAA
+AAEAAQAAAQYAAwAAAAEAAgAAAREABAAAAAEAAAAIARIAAwAAAAEAAQAAARUAAwAAAAEABAAAARYAAwAA
+AAEACwAAARcABAAAAAEAAAEIARwAAwAAAAEAAQAAAVIAAwAAAAEAAQAAAVMAAwAAAAQAAAHGh3MABwAA
+B6gAAAHOAAAAAAAIAAgACAAIAAEAAQABAAEAAAeoYXBwbAIgAABtbnRyUkdCIFhZWiAH2QACABkACwAa
+AAthY3NwQVBQTAAAAABhcHBsAAAAAAAAAAAAAAAAAAAAAAAA9tYAAQAAAADTLWFwcGwAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAtkZXNjAAABCAAAAG9kc2NtAAABeAAA
+BWxjcHJ0AAAG5AAAADh3dHB0AAAHHAAAABRyWFlaAAAHMAAAABRnWFlaAAAHRAAAABRiWFlaAAAHWAAA
+ABRyVFJDAAAHbAAAAA5jaGFkAAAHfAAAACxiVFJDAAAHbAAAAA5nVFJDAAAHbAAAAA5kZXNjAAAAAAAA
+ABRHZW5lcmljIFJHQiBQcm9maWxlAAAAAAAAAAAAAAAUR2VuZXJpYyBSR0IgUHJvZmlsZQAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAbWx1YwAAAAAAAAAeAAAADHNr
+U0sAAAAoAAABeGhySFIAAAAoAAABoGNhRVMAAAAkAAAByHB0QlIAAAAmAAAB7HVrVUEAAAAqAAACEmZy
+RlUAAAAoAAACPHpoVFcAAAAWAAACZGl0SVQAAAAoAAACem5iTk8AAAAmAAAComtvS1IAAAAWAAACyGNz
+Q1oAAAAiAAAC3mhlSUwAAAAeAAADAGRlREUAAAAsAAADHmh1SFUAAAAoAAADSnN2U0UAAAAmAAAConpo
+Q04AAAAWAAADcmphSlAAAAAaAAADiHJvUk8AAAAkAAADomVsR1IAAAAiAAADxnB0UE8AAAAmAAAD6G5s
+TkwAAAAoAAAEDmVzRVMAAAAmAAAD6HRoVEgAAAAkAAAENnRyVFIAAAAiAAAEWmZpRkkAAAAoAAAEfHBs
+UEwAAAAsAAAEpHJ1UlUAAAAiAAAE0GFyRUcAAAAmAAAE8mVuVVMAAAAmAAAFGGRhREsAAAAuAAAFPgBW
+AWEAZQBvAGIAZQBjAG4A/QAgAFIARwBCACAAcAByAG8AZgBpAGwARwBlAG4AZQByAGkBDQBrAGkAIABS
+AEcAQgAgAHAAcgBvAGYAaQBsAFAAZQByAGYAaQBsACAAUgBHAEIAIABnAGUAbgDoAHIAaQBjAFAAZQBy
+AGYAaQBsACAAUgBHAEIAIABHAGUAbgDpAHIAaQBjAG8EFwQwBDMEMAQ7BEwEPQQ4BDkAIAQ/BEAEPgRE
+BDAEOQQ7ACAAUgBHAEIAUAByAG8AZgBpAGwAIABnAOkAbgDpAHIAaQBxAHUAZQAgAFIAVgBCkBp1KAAg
+AFIARwBCACCCcl9pY8+P8ABQAHIAbwBmAGkAbABvACAAUgBHAEIAIABnAGUAbgBlAHIAaQBjAG8ARwBl
+AG4AZQByAGkAcwBrACAAUgBHAEIALQBwAHIAbwBmAGkAbMd8vBgAIABSAEcAQgAg1QS4XNMMx3wATwBi
+AGUAYwBuAP0AIABSAEcAQgAgAHAAcgBvAGYAaQBsBeQF6AXVBeQF2QXcACAAUgBHAEIAIAXbBdwF3AXZ
+AEEAbABsAGcAZQBtAGUAaQBuAGUAcwAgAFIARwBCAC0AUAByAG8AZgBpAGwAwQBsAHQAYQBsAOEAbgBv
+AHMAIABSAEcAQgAgAHAAcgBvAGYAaQBsZm6QGgAgAFIARwBCACBjz4/wZYdO9k4AgiwAIABSAEcAQgAg
+MNcw7TDVMKEwpDDrAFAAcgBvAGYAaQBsACAAUgBHAEIAIABnAGUAbgBlAHIAaQBjA5MDtQO9A7kDugPM
+ACADwAPBA78DxgOvA7sAIABSAEcAQgBQAGUAcgBmAGkAbAAgAFIARwBCACAAZwBlAG4A6QByAGkAYwBv
+AEEAbABnAGUAbQBlAGUAbgAgAFIARwBCAC0AcAByAG8AZgBpAGUAbA5CDhsOIw5EDh8OJQ5MACAAUgBH
+AEIAIA4XDjEOSA4nDkQOGwBHAGUAbgBlAGwAIABSAEcAQgAgAFAAcgBvAGYAaQBsAGkAWQBsAGUAaQBu
+AGUAbgAgAFIARwBCAC0AcAByAG8AZgBpAGkAbABpAFUAbgBpAHcAZQByAHMAYQBsAG4AeQAgAHAAcgBv
+AGYAaQBsACAAUgBHAEIEHgQxBEkEOAQ5ACAEPwRABD4ERAQ4BDsETAAgAFIARwBCBkUGRAZBACAGKgY5
+BjEGSgZBACAAUgBHAEIAIAYnBkQGOQYnBkUARwBlAG4AZQByAGkAYwAgAFIARwBCACAAUAByAG8AZgBp
+AGwAZQBHAGUAbgBlAHIAZQBsACAAUgBHAEIALQBiAGUAcwBrAHIAaQB2AGUAbABzAGV0ZXh0AAAAAENv
+cHlyaWdodCAyMDA3IEFwcGxlIEluYy4sIGFsbCByaWdodHMgcmVzZXJ2ZWQuAFhZWiAAAAAAAADzUgAB
+AAAAARbPWFlaIAAAAAAAAHRNAAA97gAAA9BYWVogAAAAAAAAWnUAAKxzAAAXNFhZWiAAAAAAAAAoGgAA
+FZ8AALg2Y3VydgAAAAAAAAABAc0AAHNmMzIAAAAAAAEMQgAABd7///MmAAAHkgAA/ZH///ui///9owAA
+A9wAAMBs0iUmJyhaJGNsYXNzbmFtZVgkY2xhc3Nlc18QEE5TQml0bWFwSW1hZ2VSZXCjKSorXxAQTlNC
+aXRtYXBJbWFnZVJlcFpOU0ltYWdlUmVwWE5TT2JqZWN00iUmLS5XTlNBcnJheaItK9IlJjAxXk5TTXV0
+YWJsZUFycmF5ozAtK9MzNAo1NjdXTlNXaGl0ZVxOU0NvbG9yU3BhY2VEMCAwABADgAzSJSY5OldOU0Nv
+bG9yojkr0iUmPD1XTlNJbWFnZaI8K18QD05TS2V5ZWRBcmNoaXZlctFAQVRyb290gAEACAARABoAIwAt
+ADIANwBGAEwAVwBeAGUAcgB5AIEAgwCFAIoAjACOAJYAmwCmAKgAqgCsALEAtAC2ALgAugC8AMEA2ADa
+ANwKVgpbCmYKbwqCCoYKmQqkCq0Ksgq6Cr0KwgrRCtUK3ArkCvEK9gr4CvoK/wsHCwoLDwsXCxoLLAsv
+CzQAAAAAAAACAQAAAAAAAABCAAAAAAAAAAAAAAAAAAALNg
+</mutableData>
+        </image>
+        <image name="denglu_btn_login.png" width="211" height="47"/>
+        <image name="denglu_btn_login_press.png" width="211" height="47"/>
+    </resources>
 </document>
