--- a/QiHuangDJ/VIewController/dianbo/VideoDianbo/DianboViewController.xib
+++ b/QiHuangDJ/VIewController/dianbo/VideoDianbo/DianboViewController.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
+        <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
@@ -8,8 +9,10 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DianboViewController">
             <connections>
                 <outlet property="carriageOffsetConstraint" destination="UNo-5k-EdK" id="oYe-cc-ikj"/>
+                <outlet property="collectBtn" destination="UVc-aU-Ssg" id="qQW-6f-5ar"/>
                 <outlet property="editorLabel" destination="y6G-nQ-xbf" id="Bdl-0j-VdD"/>
                 <outlet property="inputView" destination="DdI-HQ-jDv" id="KeC-RO-REa"/>
+                <outlet property="likeBtn" destination="wIR-JB-eMb" id="c64-sO-kI7"/>
                 <outlet property="liulanCountLabel" destination="swJ-d1-cM8" id="w3C-7k-56W"/>
                 <outlet property="mainTabe" destination="8Ee-jb-9Oy" id="r4T-ZS-pVx"/>
                 <outlet property="shuruTextFiled" destination="1P4-Zc-Jkw" id="vRV-kr-7Ps"/>
